# Crystal-Web-Framework

./: .gitignore  .monitor  CMakeLists.txt  Dockerfile  Makefile  README.md  server  ubuntu_setup.sh
app/Controller/: mainController.cpp  mainController.h
app/Router/: UserRouter.cpp
app/db/models/: initializeTables.cpp  initializeTables.h
app/db/services/: visitors.cpp  visitors.h
app/public/home/: base.css  loadCodes.js  style.css
app/public/xo-game/: script.js
app/templates/: 404NotFound.html  getUser.html  home.html  xo-game.html
example/: CMakeLists.txt
example/app/: main.cpp
example/app/Controller/: mainController.cpp  mainController.h
example/app/Router/: UserRouter.cpp  (+1 more)
monitor/: DOCUMENTATION.md  monitor.sh
scripts/: build.sh  debug_configure.sh  deploy_example.sh  release_configure.sh  run_example.sh  run_test.sh
src/: crystal.h  main.cpp
src/Controller/: Controller.cpp  Controller.h  systemController.cpp
src/HTMLTemplate/: Format.md  HTMLTemplate.cpp  HTMLTemplate.h
src/Json/: Json.cpp  Json.h  JsonNode.cpp  JsonNode.h
src/Logger/: Logger.cpp  Logger.h
src/Request/: Request.cpp  Request.h
src/Response/: Response.cpp  Response.h
src/Router/: Router.cpp  Router.h  UserRouter.cpp
src/TcpServer/: TcpServer.cpp  TcpServer.h
src/Utils/: Utils.cpp  Utils.h
src/templates/: 404NotFound.html  home.html
tests/: CMakeLists.txt  tests.cpp  tests.h
tests/HTMLTemplateTests/: HTMLTemplateTests.cpp  sampleTemplate.html  sampleTemplateJson.json
tests/JsonTests/: JsonTests.cpp  testData.json
tests/TrimTests/: TrimTests.cpp
(+51 files in other folders)
